fixed title line wrapping

--- a/components/HomePage/Home.module.css
+++ b/components/HomePage/Home.module.css
@@ -9,7 +9,7 @@
 #title {
   font-size: 3.25rem;
 
-  max-width: 10ch;
+  max-width: 24rem;
 
   color: white;
 }
